Spacing fix

--- a/assets/css/3-sections/index/_samples.sass
+++ b/assets/css/3-sections/index/_samples.sass
@@ -85,6 +85,7 @@
 	.thumb-overlay
 		p
 			font-size: 1.60vmin
+			padding-top: 15px !important
 	.thumb-unit, .portfolio-link
 		float: right !important
 		margin-right: 1% !important
